--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -93,7 +93,7 @@ since: 2021
 authoricon: heart
 
 # Footer `powered-by` and `theme-info` copyright
-copyright: false
+copyright: true
 
 # ---------------------------------------------------------------
 # SEO Settings
