--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -214,7 +214,7 @@ font:
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
-  GitHub: https://github.com/1269146988
+  GitHub: https://github.com/xhatt
 
 
 # Social Links Icons
